--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,21 @@ name = "ext-proc-channel"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["serded-json"]
+client = []
+server = []
+serded-json = ["serde_json"]
+# serded-bincode = ["bincode"]
+
+[[example]]
+name = "fib-client"
+path = "examples/fib/client.rs"
+
+[[example]]
+name = "fib-server"
+path = "examples/fib/server.rs"
+
 
 [dependencies]
 futures = "0.3"
@@ -11,7 +25,7 @@ tokio = { version = "1", features = ["full"] }
 pin-project = "1"
 fnv = "1.0"
 bytes = "1.2"
-tokio-util = { version = "0.7", features = ["codec"] }
+tokio-util = { version = "0.7", features = ["codec", "time"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", optional = true }
 bincode = { version = "1.3", optional = false }
@@ -30,18 +44,8 @@ tracing-subscriber = { version = "0.3", features = [
 time = "0.3"
 anyhow = "1"
 crossterm = "0.25"
+criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
 
-[features]
-default = ["serded-json"]
-client = []
-server = []
-serded-json = ["serde_json"]
-# serded-bincode = ["bincode"]
-
-[[example]]
-name = "fib-client"
-path = "examples/fib/client.rs"
-
-[[example]]
-name = "fib-server"
-path = "examples/fib/server.rs"
+[[bench]]
+name = "server"
+harness = false
